tests/parser/tests/cases/should_fail/non_hex_unicode_char/case.stderr
error: invalid character escape sequence. expected `}` after a escape sequence
 --> $DIR/case.hash:1:10
1 |   k := '\u{g00000}';
  |            ^ here
